# SkyRenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
build-web/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  RaylibTest.data  RaylibTest.html  RaylibTest.js  RaylibTest.wasm  build.ninja  cmake_install.cmake
cmake/: FindFmt.cmake  FindPhysFS.cmake  FindRaylib.cmake  FindSIMDE.cmake  FindSpdlog.cmake
src/sky/: AppMan.cpp  AppMan.h  AssetMan.cpp  Camera.cpp  Camera.h  Components.h  Debug.cpp  Debug.h  Filters.h  Model.cpp  Model.h  PixelBuff.cpp  PixelBuff.h  ResourceMan.cpp  ResourceMan.h  Shading.h  Util.h
